# clarissa

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .mirror-test  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  V30_REUPLOAD.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.gitlab/: applications.yml  benchmark.yml  billing.yml  ci-automation.yml  clarissa.yml  docker-build.yml  fix-shell-runner.yml  gcp-check.yml  gcp-setup.yml  gcp-vm-control.yml  gdrive-upload.yml  gmail-drafts.yml  infra-setup.yml  k3s-setup.yml  pages.yml  parallel-jobs.yml  terraform.yml
architecture/: layered-architecture.puml  learning-dialectic.puml
billing/: CONVENTIONS.md  README.md
conference/: abstract.md
config/: clarissa_colab_config.json  clarissa_credentials.json
docs/: CI_WORKFLOW_AUTOMATION.md  LLM_HANDOFF.md  billing-trigger.html  contributing.md  getting-started.md  gitlab_runner_gcp.md  index.md  infrastructure.md  portal.html  runner-management.md  search.md
experiments/: README.md
handoffs/: handoff_to_clarissa.md  handoff_to_irena.md  handover_2026-03-04.md  handover_2026-03-04_sim-engine-pipeline.md  next-session-prompt.md  next_session_prompt_2026-03-04.md
k8s/: README.md
notebooks/: CLARISSA_SPE_Cross_Validation.ipynb  Compare_Runs.ipynb  Plot_Simulation_Results.ipynb  README.md  spe_benchmark_analysis.ipynb
opmflow/: Dockerfile  README.md  dockerignore  run-opm.sh
scripts/: README.md  ask_clarissa.py  ask_irena.py  benchmark_report.py  build_docs.py  relay.py  (+31 more)
(+459 files in other folders)
